# perfetto_protos

./: .gitignore  Cargo.toml  README-crate.md  README.md  build.rs
protos/perfetto/config/: data_source_config.proto
