[package]
name = "perfetto_protos"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "generates rust bindings to protocol buffers defined by perfetto"
repository = "https://github.com/a6f/perfetto_protos"
include = [
    "**/*.rs",
    "**/*.proto",
    "Cargo.toml",
]

[lib]
path = "protos.rs"

[dependencies]
protobuf = "3.4.0"

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"
