[package]
name = "perfetto_protos"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
scription = "Generates Rust bindings to Protocol Buffers defined by Perfetto"
readme = "README-crate.md"
repository = "https://github.com/a6f/perfetto_protos"
include = [
    "**/*.rs",
    "protos/**/*.proto",
    "Cargo.toml",
]

[lib]
path = "protos.rs"

[dependencies]
protobuf = "3.4.0"

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"
