[package]
name = "perfetto_protos"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Generates Rust bindings to Protocol Buffers defined by Perfetto"
repository = "https://github.com/a6f/perfetto_protos"
readme = "README-crate.md"
include = [
    "**/*.rs",
    "protos/**/*.proto",
    "Cargo.toml",
]

[lib]
path = "protos.rs"

[dependencies]
protobuf = "3.3.0"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
